// Vitest Snapshot v1

exports[`Card > should render all the compoents 1`] = `
<div>
  <div
    class="HvIsCardGridElement HvCard-root css-pygfxg-StyledRoot e5h2ket3"
  >
    <div
      class="css-13ob5sy-StyledContainer e5h2ket2"
    >
      <div
        class="HvCard-semanticBar css-mez56c-StyledBar e5h2ket1"
      />
      <div
        class="css-a1yx5f-StyledIcon e5h2ket0"
      />
    </div>
    <div
      class="MuiCardHeader-root HvCard-Header-root e1xfuyqk0 css-1giq1b2-MuiCardHeader-root-StyledHeader"
    >
      <div
        class="MuiCardHeader-content HvCard-Header-content css-1qbkelo-MuiCardHeader-content"
      >
        <span
          class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title HvCard-Header-title css-1qvr50w-MuiTypography-root"
        >
          mockTitle
        </span>
        <span
          class="MuiTypography-root MuiTypography-body1 MuiCardHeader-subheader HvCard-Header-subheader css-nrdprl-MuiTypography-root"
        >
          mockSubtitle
        </span>
      </div>
    </div>
    <img
      alt="mockImg"
      class="MuiCardMedia-root HvCard-Media-root MuiCardMedia-media HvCard-Media-media MuiCardMedia-img e1r97lfn0 css-17tnzdv-MuiCardMedia-root-StyledMedia"
      role="img"
    />
    <div
      class="MuiCardContent-root HvCard-Content-content e12hctsi0 css-2tr0ir-MuiCardContent-root-StyledContent"
    >
      <label
        class="HvTypography-root HvTypography-label css-ivbjlp-getStyledComponent e1tnpalo0"
      >
        mockCardContent
      </label>
    </div>
  </div>
</div>
`;

exports[`Card > should render content 1`] = `
<div>
  <div
    class="HvIsCardGridElement HvCard-root css-pygfxg-StyledRoot e5h2ket3"
  >
    <div
      class="css-13ob5sy-StyledContainer e5h2ket2"
    >
      <div
        class="HvCard-semanticBar css-mez56c-StyledBar e5h2ket1"
      />
      <div
        class="css-a1yx5f-StyledIcon e5h2ket0"
      />
    </div>
    <div
      class="MuiCardContent-root HvCard-Content-content e12hctsi0 css-2tr0ir-MuiCardContent-root-StyledContent"
    >
      <label
        class="HvTypography-root HvTypography-label css-ivbjlp-getStyledComponent e1tnpalo0"
      >
        mockCardContent
      </label>
    </div>
  </div>
</div>
`;

exports[`Card > should render correctly 1`] = `
<div>
  <div
    class="HvIsCardGridElement HvCard-root css-pygfxg-StyledRoot e5h2ket3"
  >
    <div
      class="css-13ob5sy-StyledContainer e5h2ket2"
    >
      <div
        class="HvCard-semanticBar css-mez56c-StyledBar e5h2ket1"
      />
      <div
        class="css-a1yx5f-StyledIcon e5h2ket0"
      />
    </div>
  </div>
</div>
`;

exports[`Card > should render header 1`] = `
<div>
  <div
    class="HvIsCardGridElement HvCard-root css-pygfxg-StyledRoot e5h2ket3"
  >
    <div
      class="css-13ob5sy-StyledContainer e5h2ket2"
    >
      <div
        class="HvCard-semanticBar css-mez56c-StyledBar e5h2ket1"
      />
      <div
        class="css-a1yx5f-StyledIcon e5h2ket0"
      />
    </div>
    <div
      class="MuiCardHeader-root HvCard-Header-root e1xfuyqk0 css-1giq1b2-MuiCardHeader-root-StyledHeader"
    >
      <div
        class="MuiCardHeader-content HvCard-Header-content css-1qbkelo-MuiCardHeader-content"
      >
        <span
          class="MuiTypography-root MuiTypography-h5 MuiCardHeader-title HvCard-Header-title css-1qvr50w-MuiTypography-root"
        >
          mockTitle
        </span>
        <span
          class="MuiTypography-root MuiTypography-body1 MuiCardHeader-subheader HvCard-Header-subheader css-nrdprl-MuiTypography-root"
        >
          mockSubtitle
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Card > should render image 1`] = `
<div>
  <div
    class="HvIsCardGridElement HvCard-root css-pygfxg-StyledRoot e5h2ket3"
  >
    <div
      class="css-13ob5sy-StyledContainer e5h2ket2"
    >
      <div
        class="HvCard-semanticBar css-mez56c-StyledBar e5h2ket1"
      />
      <div
        class="css-a1yx5f-StyledIcon e5h2ket0"
      />
    </div>
    <img
      alt="mockImg"
      class="MuiCardMedia-root HvCard-Media-root MuiCardMedia-media HvCard-Media-media MuiCardMedia-img e1r97lfn0 css-17tnzdv-MuiCardMedia-root-StyledMedia"
      role="img"
    />
  </div>
</div>
`;
